[gd_scene load_steps=19 format=3 uid="uid://bt3q8dtknnanx"]

[ext_resource type="Texture2D" uid="uid://ck1d3og5vhx1o" path="res://assets/beaver.png" id="1_fcsi6"]
[ext_resource type="Script" path="res://game_components/entities/Beaver.gd" id="1_xf0lf"]
[ext_resource type="AudioStream" uid="uid://b8t67b14micpr" path="res://assets/steps.mp3" id="3_ri7pe"]
[ext_resource type="Texture2D" uid="uid://62muytdfsagi" path="res://assets/beaverFrames.png" id="5_lf71e"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b4njb"]
radius = 13.0
height = 46.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sxtrg"]
radius = 45.0444

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_jdmcd"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false
properties/1/path = NodePath("Beaver:flip_h")
properties/1/spawn = true
properties/1/sync = true
properties/1/watch = false
properties/2/path = NodePath("AnimatedSprite2D:animation")
properties/2/spawn = true
properties/2/sync = true
properties/2/watch = false

[sub_resource type="AtlasTexture" id="AtlasTexture_nxuix"]
atlas = ExtResource("5_lf71e")
region = Rect2(16, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rv36"]
atlas = ExtResource("5_lf71e")
region = Rect2(128, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlubf"]
atlas = ExtResource("5_lf71e")
region = Rect2(240, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxrnw"]
atlas = ExtResource("5_lf71e")
region = Rect2(912, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1omwk"]
atlas = ExtResource("5_lf71e")
region = Rect2(800, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1gno"]
atlas = ExtResource("5_lf71e")
region = Rect2(688, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcpqw"]
atlas = ExtResource("5_lf71e")
region = Rect2(1024, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w7mx"]
atlas = ExtResource("5_lf71e")
region = Rect2(352, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hobqr"]
atlas = ExtResource("5_lf71e")
region = Rect2(464, 16, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiskh"]
atlas = ExtResource("5_lf71e")
region = Rect2(576, 16, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_4u4vi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxuix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rv36")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlubf")
}],
"loop": true,
"name": &"carry_log",
"speed": 5.0
}, {
"frames": [{
"duration": 15.0,
"texture": SubResource("AtlasTexture_lxrnw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_1omwk")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_b1gno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1omwk")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_lxrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcpqw")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_nlubf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rv36")
}],
"loop": true,
"name": &"idle_log",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w7mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hobqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiskh")
}],
"loop": true,
"name": &"walking",
"speed": 8.0
}]

[node name="Beaver" type="CharacterBody2D"]
z_index = 1
position = Vector2(0, -9)
script = ExtResource("1_xf0lf")

[node name="Beaver" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.0820312, 0.0820312)
texture = ExtResource("1_fcsi6")
offset = Vector2(-100, -119)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -9)
shape = SubResource("CapsuleShape2D_b4njb")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(1.5, 1.5)
limit_smoothed = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="InteractionComponents"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionArea"]
shape = SubResource("CircleShape2D_sxtrg")

[node name="InteractionLabel" type="Label" parent="InteractionComponents"]
offset_left = -42.0
offset_top = -59.0
offset_right = 42.0
offset_bottom = -36.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_jdmcd")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ri7pe")
attenuation = 1.86607

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -34)
sprite_frames = SubResource("SpriteFrames_4u4vi")
animation = &"walking"
frame_progress = 0.675818

[connection signal="area_entered" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionArea" to="." method="_on_interaction_area_area_exited"]
